# WaveFunctionCollapse

./: .gitignore  CMakeLists.txt  readme.md
image-demo/: index.html  readme.md
src/: image.cpp  sudoku.cpp  wfc.cpp
